<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/liner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/question1"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/answer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question1"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/answer1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/liner1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/question2"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/answer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question1"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/answer2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/liner2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/question3"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/answer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question1"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/answer3" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/liner3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/question4"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/answer4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question1"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/answer4" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/liner4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/question5"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/answer5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question1"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/answer5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/liner5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/question6"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/answer6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question1"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/answer6" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/liner6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/question7"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/answer7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question1"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/answer7" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/liner7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/question8"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/answer8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question1"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/answer8" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/liner8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/question9"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/answer9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question1"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/answer9" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>